# sunset

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  flake.nix  gleam.toml  manifest.toml  package-lock.json  package.json
.cargo/: config.toml
assets/: index.html  sunset.css
crates/sunset-cli/: Cargo.toml
crates/sunset-cli/src/: build.rs  client.rs  command.rs  dispatch.rs  identity.rs  lib.rs  main.rs  resolver_adapter.rs  view.rs
crates/sunset-cli/src/ui/: input.rs  mod.rs  render.rs
crates/sunset-cli/tests/: command_dispatch.rs  peer_visibility.rs  roundtrip_ws.rs  roundtrip_wt.rs
crates/sunset-cli/tests/helpers/: mod.rs
crates/sunset-core/: Cargo.toml
crates/sunset-core-wasm/: Cargo.toml
crates/sunset-core-wasm/src/: lib.rs
crates/sunset-core-wasm/tests/: web.rs
crates/sunset-core/src/: bus.rs  canonical.rs  error.rs  filters.rs  identity.rs  lib.rs  liveness.rs  membership.rs  message.rs  reactions.rs  signaling.rs  verifier.rs
crates/sunset-core/src/crypto/: aead.rs  constants.rs  envelope.rs  mod.rs  room.rs
crates/sunset-core/src/membership/: body.rs  mod.rs  publisher.rs
crates/sunset-core/src/peer/: mod.rs  open_room.rs
crates/sunset-core/tests/: bus_integration.rs  liveness_with_bus.rs  reactions_tracker.rs  receipts.rs  two_peer_message.rs  two_peer_reaction.rs  voice_two_peer.rs
crates/sunset-image/: Cargo.toml
crates/sunset-image/src/: lib.rs
crates/sunset-image/tests/: preprocess.rs
crates/sunset-markdown/: Cargo.toml
crates/sunset-markdown/src/: blocks.rs  inline.rs  lib.rs
crates/sunset-markdown/tests/: property.rs
crates/sunset-noise/: Cargo.toml
crates/sunset-noise/src/: error.rs  handshake.rs  identity.rs  kk.rs  lib.rs  pattern.rs
crates/sunset-noise/tests/: parallel_accept.rs
crates/sunset-relay/: Cargo.toml
crates/sunset-relay-resolver/: Cargo.toml
crates/sunset-relay-resolver/src/: error.rs  json.rs  lib.rs  parse.rs  resolver.rs
crates/sunset-relay/src/: app.rs  bridge.rs  config.rs  error.rs  fs_util.rs  identity.rs  lib.rs  main.rs  relay.rs  render.rs  resolver_adapter.rs  router.rs  snapshot.rs  status.rs  wt_cert.rs  wt_combinator.rs
crates/sunset-relay/tests/: accept_resilience.rs  http_index.rs  identity_forward_count.rs  multi_relay.rs  relay_concurrent_handshakes.rs  resolver_integration.rs  webtransport_e2e.rs
crates/sunset-store/: Cargo.toml
crates/sunset-store-fs/: Cargo.toml
crates/sunset-store-fs/src/: blobs.rs  gc.rs  kv.rs  lib.rs  schema.rs  store.rs  subscription.rs
crates/sunset-store-fs/tests/: conformance.rs
crates/sunset-store-indexeddb/: Cargo.toml
crates/sunset-store-indexeddb/src/: lib.rs  stub.rs
crates/sunset-store-indexeddb/src/wasm/: db.rs  mod.rs  req.rs  store.rs  subscription.rs
crates/sunset-store-memory/: Cargo.toml
crates/sunset-store-memory/src/: lib.rs  store.rs  subscription.rs
crates/sunset-store-memory/tests/: conformance.rs
crates/sunset-store/src/: canonical.rs  error.rs  filter.rs  fixtures.rs  lib.rs  store.rs  subscription.rs  test_helpers.rs  types.rs  verifier.rs
crates/sunset-sync/: Cargo.toml
crates/sunset-sync-quic/: Cargo.toml
crates/sunset-sync-quic/src/: cert.rs  connection.rs  coordinator.rs  discovery.rs  lib.rs  socket.rs  transport.rs  verifier.rs  wire.rs
crates/sunset-sync-quic/tests/: holepunch_loopback.rs  multi_peer.rs  peer_disconnect.rs  stun_skipped.rs
crates/sunset-sync-webrtc-browser/: Cargo.toml
crates/sunset-sync-webrtc-browser/src/: lib.rs  stub.rs  wasm.rs
crates/sunset-sync-webrtc-browser/tests/: construct.rs
crates/sunset-sync-webtransport-native/: Cargo.toml
crates/sunset-sync-webtransport-native/src/: address.rs  cert.rs  lib.rs
crates/sunset-sync-ws-browser/: Cargo.toml
crates/sunset-sync-ws-browser/src/: lib.rs  stub.rs  wasm.rs
crates/sunset-sync-ws-browser/tests/: construct.rs
crates/sunset-sync-ws-native/: Cargo.toml
crates/sunset-sync-ws-native/src/: axum_integration.rs  lib.rs
crates/sunset-sync-ws-native/tests/: parallel_accept.rs  two_peer_ws_noise.rs  two_peer_ws_noise_large.rs
crates/sunset-sync/src/: accept_worker.rs  chunked.rs  connectable.rs  digest.rs  dual_inbound_transport.rs  engine.rs  error.rs  fallback_transport.rs  lib.rs  message.rs  multi_transport.rs  native_stub.rs  peer.rs  reserved.rs  signaler.rs  signer.rs  spawn.rs  spawning_acceptor.rs  subscription_registry.rs  supervisor.rs  test_fixtures.rs  test_helpers.rs  test_transport.rs  transport.rs  types.rs
crates/sunset-sync/src/routing/: coverage.rs  forward.rs  mod.rs  naming.rs  policy.rs  routes.rs  types.rs
crates/sunset-sync/tests/: ephemeral_two_peer.rs  phase2_subscribe.rs  relay_ephemeral.rs  subscribe_backfill.rs  subscription_provider_scoped_withdraw.rs  supervisor_with_engine.rs  two_peer_sync.rs
crates/sunset-voice/: Cargo.toml  build.rs
crates/sunset-voice/csrc/wasm_libc/: alloca.h  math.h  stdio.h  stdlib.h  string.h
crates/sunset-voice/src/: denoise.rs  lib.rs  packet.rs
crates/sunset-voice/src/codec/: ffi.rs  mod.rs  wasm_runtime.rs
crates/sunset-voice/src/runtime/: auto_connect.rs  combiner.rs  dyn_bus.rs  dyn_bus_impl.rs  heartbeat.rs  jitter.rs  mod.rs  state.rs  subscribe.rs  traits.rs  voice_presence_membership.rs  voice_presence_publisher.rs  voice_provider.rs
crates/sunset-voice/tests/: runtime_integration.rs  runtime_skeleton.rs  runtime_traits.rs  voice_provider.rs
crates/sunset-web-wasm/: Cargo.toml  build.rs
crates/sunset-web-wasm/src/: client.rs  identity.rs  intent.rs  lib.rs  markdown.rs  members.rs  membership_tracker.rs  messages.rs  presence_publisher.rs  reactions.rs  relay_signaler.rs  resolver_adapter.rs  room_handle.rs  voice.rs
crates/sunset-web-wasm/src/voice/: dialer.rs  frame_sink.rs  liveness.rs  mod.rs  peer_state_sink.rs  subscriber.rs  test_hooks.rs  transport.rs
crates/sunset-web-wasm/tests/: construct.rs  markdown_wasm.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/scripts/: bake-icons.sh
desktop/src/: main.rs
src/: sunset.gleam  (+1 more)
(+278 files in other folders)
