[workspace]
members = ["crates/sunset-store", "crates/sunset-store-memory", "crates/sunset-store-fs", "crates/sunset-sync", "crates/sunset-noise", "crates/sunset-core", "crates/sunset-core-wasm", "crates/sunset-sync-ws-native", "crates/sunset-sync-ws-browser", "crates/sunset-sync-webrtc-browser", "crates/sunset-voice", "crates/sunset-web-wasm", "crates/sunset-relay", "crates/sunset-relay-resolver"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "ws"] }
clap = { version = "4", features = ["derive", "env"] }
async-stream = "0.3"
blake3 = { version = "1", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }
ed25519-dalek = { version = "2", default-features = false, features = ["std", "fast", "rand_core"] }
hkdf = "0.12"
js-sys = "0.3"
rand_chacha = { version = "0.3", default-features = false }
rand_core = "0.6"
sha2 = { version = "0.10", default-features = false }
wasm-bindgen = "=0.2.117"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
  "WebSocket",
  "MessageEvent",
  "BinaryType",
  "CloseEvent",
  "Event",
  "RtcPeerConnection",
  "RtcConfiguration",
  "RtcIceServer",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
  "RtcSdpType",
  "RtcDataChannel",
  "RtcDataChannelInit",
  "RtcDataChannelEvent",
  "RtcDataChannelType",
  "RtcDataChannelState",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcPeerConnectionIceEvent",
  "RtcOfferOptions",
  "RtcAnswerOptions",
  "Request",
  "RequestInit",
  "Response",
  "Window",
] }
zeroize = { version = "1", default-features = false, features = ["alloc", "derive"] }
futures = "0.3"
hex = "0.4"
postcard = { version = "1", features = ["use-std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
snow = { version = "0.10", default-features = false, features = ["default-resolver", "use-curve25519", "use-blake2", "use-chacha20poly1305", "use-xchacha20poly1305", "use-getrandom"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-stream = "0.1"
wasmtimer = "0.4"
web-time = "1"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
wasm-tracing = "2.1"
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
url = "2"
sunset-store = { path = "crates/sunset-store" }
sunset-store-fs = { path = "crates/sunset-store-fs" }
sunset-store-memory = { path = "crates/sunset-store-memory" }
sunset-sync = { path = "crates/sunset-sync" }
sunset-noise = { path = "crates/sunset-noise" }
sunset-core = { path = "crates/sunset-core" }
sunset-sync-ws-native = { path = "crates/sunset-sync-ws-native" }
sunset-sync-ws-browser = { path = "crates/sunset-sync-ws-browser" }
sunset-sync-webrtc-browser = { path = "crates/sunset-sync-webrtc-browser" }
sunset-relay-resolver = { path = "crates/sunset-relay-resolver" }
sunset-voice = { path = "crates/sunset-voice" }

[workspace.lints.rust]
unused_must_use = "deny"
unsafe_code = "deny"

[workspace.lints.clippy]
enum_glob_use = "warn"
needless_pass_by_value = "warn"
