[package]
name = "sunset-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "sunset-cli"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
futures.workspace = true
hex.workspace = true
ratatui.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
reqwest.workspace = true
sunset-core.workspace = true
sunset-noise.workspace = true
sunset-relay-resolver.workspace = true
sunset-store.workspace = true
sunset-store-memory.workspace = true
sunset-sync.workspace = true
sunset-sync-webtransport-native.workspace = true
sunset-sync-ws-native.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt", "rt-multi-thread", "signal", "fs", "sync", "net", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[dev-dependencies]
sunset-relay = { workspace = true, features = ["test-helpers"] }
sunset-sync = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
