[package]
name = "sunset-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
argon2.workspace = true
blake3.workspace = true
bytes.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
hkdf.workspace = true
postcard.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
sunset-store.workspace = true
sunset-sync.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
rand_core = { workspace = true, features = ["getrandom"] }
sunset-store = { workspace = true, features = ["test-helpers"] }
sunset-store-memory.workspace = true
sunset-sync = { workspace = true, features = ["test-helpers"] }
tokio = { workspace = true, features = ["macros", "rt", "time", "sync"] }
