[package]
name = "sunset-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-helpers = ["sunset-store/test-helpers", "sunset-sync/test-helpers"]

[dependencies]
argon2.workspace = true
async-stream.workspace = true
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
hex.workspace = true
hkdf.workspace = true
postcard.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
sunset-store.workspace = true
sunset-sync.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream = { workspace = true }
tracing.workspace = true
web-time.workspace = true
zeroize.workspace = true

# Wasm needs a setTimeout-backed `tokio::time::sleep` drop-in; the
# `membership` module's refresh ticker uses it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer.workspace = true

[dev-dependencies]
hex.workspace = true
postcard.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
sunset-store = { workspace = true, features = ["test-helpers"] }
sunset-store-memory.workspace = true
sunset-sync = { workspace = true, features = ["test-helpers"] }
sunset-voice.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time", "sync"] }
