[package]
name = "sunset-image"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Decode JPEG/PNG/WebP/GIF, resize, encode JPEG. Default features pull
# in formats and codecs we don't need (TIFF, EXR, etc.); the explicit
# feature list keeps the wasm bundle lean.
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
  "gif",
] }

# Pure-Rust HEIC/HEIF decoder. `no_std + alloc`, compiles for
# wasm32-unknown-unknown, no C/FFI deps. We only use the decoder.
# `av1` enables decoding AV1-in-HEIF (still images); the AV1 still-image
# format is what Apple uses for some newer captures and Android cameras
# emit. `unci` enables uncompressed HEIF; tiny and harmless to include.
heic = { version = "0.1", default-features = false, features = ["av1", "unci"] }

base64 = { version = "0.22", default-features = false, features = ["alloc"] }
thiserror = { workspace = true }

[dev-dependencies]
