[package]
name = "sunset-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, optional = true }
unicode-properties = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
serde = ["dep:serde", "serde/derive"]
