[package]
name = "sunset-noise"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
curve25519-dalek.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
sha2.workspace = true
snow.workspace = true
sunset-store.workspace = true
sunset-sync.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
rand_core = { workspace = true, features = ["getrandom"] }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
