[package]
name = "sunset-noise"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
curve25519-dalek.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
getrandom.workspace = true
hex.workspace = true
sha2.workspace = true
snow.workspace = true
sunset-store.workspace = true
sunset-sync.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
zeroize.workspace = true

tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
async-trait = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
zeroize = { workspace = true }
