[package]
name = "sunset-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
test-helpers = []

[lints]
workspace = true

[[bin]]
name = "sunset-relay"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
axum = { workspace = true }
bytes.workspace = true
clap.workspace = true
curve25519-dalek.workspace = true
futures.workspace = true
hex.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
serde = { workspace = true, features = ["derive"] }
reqwest.workspace = true
sunset-core.workspace = true
sunset-noise.workspace = true
sunset-relay-resolver.workspace = true
sunset-store.workspace = true
sunset-store-fs.workspace = true
sunset-sync.workspace = true
sunset-sync-ws-native = { workspace = true, features = ["axum"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt", "signal", "fs", "sync", "net", "time"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
web-time.workspace = true
zeroize.workspace = true

[dev-dependencies]
sunset-store-memory.workspace = true
sunset-sync = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "signal", "fs", "sync", "net"] }
tokio-tungstenite.workspace = true
