[package]
name = "sunset-sync-webtransport-native"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
sunset-sync.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "net", "time"] }
tracing.workspace = true
url.workspace = true
wtransport.workspace = true

[dev-dependencies]
hex.workspace = true
sunset-noise.workspace = true
sunset-core.workspace = true
sunset-store-memory.workspace = true
sunset-sync = { workspace = true, features = ["test-helpers"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "sync", "net"] }
