[package]
name = "sunset-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
blake3.workspace = true
bytes.workspace = true
futures.workspace = true
postcard.workspace = true
serde.workspace = true
sunset-store.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }

[dev-dependencies]
sunset-store = { workspace = true, features = ["test-helpers"] }
sunset-store-memory.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }

[features]
test-helpers = []
