[package]
name = "sunset-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
blake3.workspace = true
bytes.workspace = true
futures.workspace = true
postcard.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
serde.workspace = true
sunset-store.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tokio-stream = { workspace = true }
web-time.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
wasmtimer.workspace = true

[dev-dependencies]
ed25519-dalek = { workspace = true }
sunset-store = { workspace = true, features = ["test-helpers"] }
sunset-store-memory.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "sync", "test-util"] }

[features]
test-helpers = []
