[package]
name = "sunset-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hkdf.workspace = true
postcard.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
sunset-core.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
