[package]
name = "sunset-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
# `links = "opus"` advertises that this crate vendors and statically
# builds libopus. Cargo surfaces our build script's
# `cargo:lib_dir=...` output to dependents as `DEP_OPUS_LIB_DIR`,
# which `sunset-web-wasm/build.rs` reads to re-emit the static-archive
# search-path + link-lib for its cdylib link step (see comment in
# `crates/sunset-voice/build.rs`).
links = "opus"
build = "build.rs"

[features]
default = []
test-hooks = []

[lints]
workspace = true

[build-dependencies]
cc.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
hex.workspace = true
hkdf.workspace = true
nnnoiseless.workspace = true
postcard.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
sunset-core.workspace = true
sunset-store.workspace = true
sunset-sync.workspace = true
thiserror.workspace = true
tracing.workspace = true
web-time.workspace = true
zeroize.workspace = true
async-stream.workspace = true
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer.workspace = true
wasm-bindgen-futures.workspace = true
# Pure-Rust libm. Used by `codec::wasm_runtime` to satisfy libopus's
# `<math.h>` undefined references (sin, cos, exp, log, sqrt, lrint,
# frexp, …) when targeting wasm32-unknown-unknown.
libm.workspace = true

[dev-dependencies]
hex.workspace = true
rand_chacha.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
async-trait.workspace = true
postcard.workspace = true
sunset-store = { workspace = true, features = ["test-helpers"] }
sunset-store-memory = { path = "../sunset-store-memory" }
sunset-sync = { workspace = true, features = ["test-helpers"] }
